# ClothSim

./: CMakeLists.txt  README.md
assets/: chicken.mtl
src/: cloth.c  cloth.h  main.c
